# LNGBM

./: .clang-format  .dockerignore  .gitignore  10_11_2023.md  Algo Construction arbre de décision  Benchmark.cpp  CMakeLists.txt  Dockerfile  LICENSE  Makefile  Notes.md  README.md  data_loading.cpp  data_loading.h  decision_tree.cpp  decision_tree.h  implémSAD.cpp  implémSAD.h  kernels.c  main.cpp
Benchmark/: Benchmark.cpp  CMakeLists.txt  mainBenchmark.cpp
Benchmark/include/: Benchmark.hpp
Benchmark/src/: Benchmark.cpp  Timer.cpp
Documents/: sujet.md
benchmark/: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  mainBenchmark.cpp
benchmark/include/: Timer.hpp
benchmark/src/: Benchmark.cpp
data/: d1_Test.csv
data/datasets/: d1.csv  d1.md
include/: Bagging2.hpp  BaggingModel.hpp  DataSet.hpp  DecisionTree.hpp  Doxyfile  EnumOperator.hpp  IOperator.hpp  MAE.hpp  MAPE.hpp  RMSE.hpp  RandomForest.hpp  ReductionInVar.hpp  TreeNode.hpp  data_loading.h  decision_tree.h
include/Criterias/: EnumCriteria.hpp  EnumCriterias.hpp  Histogram.hpp  ICriteria.hpp  ICriterias.hpp  Percentiles.hpp  Quartiles.hpp  RandomValues.hpp  Random_Values.hpp  UniformDistribution.hpp  UniqueValues.hpp  Unique_Values.hpp
include/Dataset/: DataSet.hpp
include/Histogram/: Bin.hpp  Histogram.hpp  Histogram2.hpp
include/MpiWrapper/: MPIWrapper.hpp
include/Operators/: EnumOperator.hpp  IOperator.hpp  MAE.hpp  MAPE.hpp  RIV.hpp  RMSE.hpp  ReductionInVar.hpp
include/PredictionModel/: BaggingModel.hpp  IModel.hpp  RandomForest.hpp  TrainingElement.hpp
include/PredictionModel/Trees/: DecisionTree.hpp  HistogramTrainingElement.hpp  TrainingElement.hpp  TreeNode.hpp
include/Tools/: NodeSerializer.hpp  Serializer.hpp  Timer.hpp  Tools.hpp
include/Tree/: DecisionTree.hpp  TreeNode.hpp
include/UserHandler/: UserHandler.hpp
include/Utils/: Serializer.hpp  Timer.hpp  Tools.hpp
include/Validation/: Answers.hpp  CrossValidation.hpp  Validation.hpp
lune/bureau/: tm.txt
scripts/: README.md  benchmarks_single_tree.sh  installer.sh  plot_one_tree_benchmarks.py  script_log.txt
src/: Bagging2.cpp  BaggingModel.cpp  CMakeLists.txt  DataSet.cpp  DecisionTree.cpp  Makefile  TreeNode.cpp  data_loading.cpp  decision_tree.cpp
src/Criterias/: EnumCriteria.cpp  Histogram.cpp  Percentiles.cpp  Quartiles.cpp  RandomValues.cpp  Random_Values.cpp  UniformDistribution.cpp  UniqueValues.cpp  Unique_Values.cpp
src/Dataset/: DataSet.cpp
src/Histogram/: Bins.cpp  Histogram.cpp  Histogram2.cpp
src/MpiWrapper/: MPIWrapper.cpp
src/Operators/: EnumOperator.cpp  MAE.cpp  MAPE.cpp  RIV.cpp  RMSE.cpp  ReductionInVar.cpp
src/PredictionModel/: BaggingModel.cpp  RandomForest.cpp  TrainingElement.cpp
src/PredictionModel/Trees/: DecisionTree.cpp  HistogramTrainingElement.cpp  TrainingElement.cpp  TreeNode.cpp
src/Tools/: Serializer.cpp  Timer.cpp  Tools.cpp
src/Tree/: DecisionTree.cpp  TreeNode.cpp
src/UserHandler/: UserHandler.cpp
src/Utils/: Serializer.cpp  Timer.cpp  Tools.cpp
src/Validation/: Answers.cpp  CrossValidation.cpp  Validation.cpp
test/: CMakeLists.txt  CTestTestfile.cmake  DataSet_Test.cpp  DecisionTree_Test.cpp  Makefile  README.md  TreeNode_Test.cpp  cmake_install.cmake  main_Test.cpp  matrix.csv
test/Dataset/: DataSet_Test.cpp
test/PredictionModel/Trees/: DecisionTree_Test.cpp  TreeNode_Test.cpp
